@@ -1,5 +1,8 @@
 =========== Version 2.9.2
 	- The function pbs_rescquery() did not work. Fixed it
+	- The function avail(), did not work fixed it
+	- The functions pbs_rescreserve and pbs_rescrelease did not work
+	  fixed it
 
 	- Fixed a bug in new_rack_pbsmon.py. Counting of serial
 	  nodes was wrong and state down has topmost priority
